Support: Prevent search field input text from overlapping search icon.
Props shailu25, rajinsharwar.
Fixes #7205.


git-svn-id: https://meta.svn.wordpress.org/sites/trunk@13369 74240141-8908-4e6f-9713-ba540dce6ec7

--- a/wordpress.org/public_html/wp-content/themes/pub/wporg-support/sass/site/_site.scss
+++ b/wordpress.org/public_html/wp-content/themes/pub/wporg-support/sass/site/_site.scss
@@ -439,7 +439,8 @@ body.home #page .site-main {
 	.site-main & .search-field {
 		border: 1px solid $color__border-input;
 		box-shadow: inset 0 1px 2px rgba( 0, 0, 0, 0.07 );
-		padding: 0.5rem;
+		padding: 0.5rem 2.8rem 0.5rem 0.5rem;
+		text-overflow: ellipsis;
 		width: 100%;
 	}
 }
