--- a/wordpress.org/public_html/wp-content/themes/pub/wporg-support/style.css
+++ b/wordpress.org/public_html/wp-content/themes/pub/wporg-support/style.css
@@ -3197,7 +3197,8 @@ body.home #page .site-main {
 .site-main .search-form .search-field {
 	border: 1px solid #ddd;
 	box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.07);
-	padding: 0.5rem;
+	padding: 0.5rem 2.8rem 0.5rem 0.5rem;
+	text-overflow: ellipsis;
 	width: 100%;
 }
 
